--- a/Makefile.am
+++ b/Makefile.am
@@ -5,7 +5,7 @@
 include $(top_srcdir)/Makefile-include.am
 include $(top_srcdir)/Makefile-tested.am
 
-AM_CFLAGS  +=  -O4 -std=c99 -Wall -I$(COTS_PATH)/build$(RATS_ARCH_SUFFIX)/$(FFTW)/api
+AM_CFLAGS  +=  -O4 -std=c99 -Wall -lpthread -I$(COTS_PATH)/build$(RATS_ARCH_SUFFIX)/$(FFTW)/api
 AM_LDFLAGS   += -L$(COTS_PATH)/opt/$(FFTW)$(RATS_COMPILER_SUFFIX)$(RATS_ARCH_SUFFIX)/lib/ -l$(lib_FFTW) -lm
 
 
